Bug 495920 - nsThebesDeviceContext shouldn't have a reference to a native widget. r=masayuki, sr=roc