view/public/nsIScrollableView.h
@@ -39,6 +39,7 @@
 #define nsIScrollableView_h___
 
 #include "nsCoord.h"
+#include "nsNativeWidget.h"
 
 class nsIView;
 class nsIScrollPositionListener;
